--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "jest"
   },
+  "hooks": {
+    "pre-commit": "lint-staged"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
