--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
-  "trailingComma": "none",
+  "semi": true,
+  "trailingComma": "all",
   "singleQuote": true,
-  "semi": false
+  "printWidth": 70
 }
