--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/faker": "^5.5.9",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
@@ -36,5 +37,8 @@
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "axios": "^0.24.0"
   }
 }
