--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
     "plugin:@typescript-eslint/recommended", // Uses the recommended rules from @typescript-eslint/eslint-plugin
     "plugin:prettier/recommended" // Enables eslint-plugin-prettier and eslint-config-prettier. This will display prettier errors as ESLint errors. Make sure this is always the last configuration in the extends array.
   ],
+  "plugins": ["react"],
   "rules": {
     "@typescript-eslint/explicit-function-return-type": ["error"],
     "@typescript-eslint/no-inferrable-types": ["off"]
